Yamls/nanofase/api_deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: nanofase-api
  namespace: nanofase
spec:
  selector:
    app: nanofase-api
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5001
---
apiVersion: apps/v1 # for versions before 1.8.0 use apps/v1
kind: Deployment
metadata:
  name: nanofase-api
  namespace: nanofase
spec:
  selector:
    matchLabels:
      app: nanofase-api
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      name: nanofase-api
      labels:
        app: nanofase-api
    spec:
      containers:
      - name: nanofase-api
        image: nanosolveit/nanofase-api:1.0.5
        ports:
        - containerPort: 5001
        volumeMounts:
        - name: workdir
          mountPath: /nanofase-api/conf
      volumes:
      - name: workdir
        emptyDir: {}
---
