Yamls/nanofase/app_deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: nanofase-app
  namespace: nanofase
spec:
  selector:
    app: nanofase-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1 
kind: Pod
metadata:
  name: nanofase-app
  namespace: nanofase
  labels:
    app: nanofase-app
spec:
  containers:
  - name: nanofase-app
    image: nanosolveit/nanofase:1.0.7
    ports:
    - containerPort: 80
    volumeMounts:
    - name: workdir
      mountPath: /usr/share/nginx/html/conf
  dnsPolicy: Default
  volumes:
  - name: workdir
    emptyDir: {}
---
