Yamls/nanofase/app_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nanofase-app-secure
  namespace: nanofase
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts: 
    - nanofase.cloud.nanosolveit.eu
    secretName: nanofase-app-cert
  rules:
  - host: nanofase.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: nanofase-app
          servicePort: 80
        path: /
